--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<encoding>UTF-8</encoding>
-		<scala.version>2.11.5</scala.version>
-		<scala.compat.version>2.11</scala.compat.version>
+		<scala.version>2.10.5</scala.version>
+		<scala.compat.version>2.10</scala.compat.version>
 	</properties>
 
 	<dependencies>
@@ -29,6 +29,23 @@
 			<artifactId>scala-library</artifactId>
 			<version>${scala.version}</version>
 		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core_2.10 -->
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-core_2.10</artifactId>
+    <version>1.5.2</version>
+</dependency>
+		
+<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming_2.10 -->
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-streaming_2.10</artifactId>
+    <version>1.5.2</version>
+    <scope>provided</scope>
+</dependency>
+		
 
 		<!-- Test -->
 		<dependency>
