--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,21 @@
 </dependency>
 		
 
+<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka_2.10 -->
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-streaming-kafka_2.10</artifactId>
+    <version>1.5.2</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka_2.10 -->
+<dependency>
+    <groupId>org.apache.kafka</groupId>
+    <artifactId>kafka_2.10</artifactId>
+    <version>0.9.0.1</version>
+</dependency>
+
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -117,6 +132,18 @@ https://stackoverflow.com/questions/35016945/scalac-error-bad-option-maketransit
 					</includes>
 				</configuration>
 			</plugin>
-		</plugins>
-	</build>
+<!-- 作用是打包Scala程序和所用到的jar包一起到一个jar文件
+Run As->Maven build，Goals输入assembly:assembly
+ -->
+<plugin>
+	<artifactId>maven-assembly-plugin</artifactId>
+	<version>2.6</version>
+	<configuration>
+		<descriptorRefs>
+			<descriptorRef>jar-with-dependencies</descriptorRef>
+		</descriptorRefs>
+	</configuration>
+</plugin>
+	</plugins>
+</build>
 </project>
